--- a/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/ClientApp/src/app/toolbar/toolbar.component.html
@@ -20,7 +20,7 @@
       <button mat-icon-button type="button" aria-label="Toggle sidenav" (click)="drawer.toggle()">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <div class="proj-title"><a routerLink="/">ResearCheetah</a></div>
+      <div class="proj-title"><a routerLink="/">--ResearCheetah--</a></div>
       <!-- Filler to take the remaining space of the row -->
       <span class="fill-remaining-space"></span>
       <div *ngIf="!isAuth"> 
