--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -8,3 +8,8 @@ body {
     margin: 0; 
     font-family: 'Roboto', sans-serif; 
 }
+
+.snack-bar-color-ok {
+    background-color: #00ff7f;
+    color: orange;
+}  
