end of module 9

--- a/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/ClientApp/src/app/toolbar/toolbar.component.html
@@ -5,7 +5,7 @@
     <mat-nav-list (click)="drawer.toggle()">
       <a mat-list-item routerLink="/"><mat-icon class="icon-menu">home</mat-icon>Default</a>
       <a mat-list-item routerLink="products"><mat-icon class="icon-menu">devices_other</mat-icon>Products</a>
-      <a mat-list-item routerLink="table"><mat-icon class="icon-menu">favorite</mat-icon>Example Table</a>
+      <a mat-list-item routerLink="users"><mat-icon class="icon-menu">favorite</mat-icon>Example Table</a>
       <a mat-list-item routerLink="testcore"><mat-icon class="icon-menu">ball</mat-icon>Test Core</a>
       
     </mat-nav-list>
