prep for edit user

--- a/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/ClientApp/src/app/toolbar/toolbar.component.html
@@ -47,9 +47,9 @@
                 </button>
 
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item>
+                  <button mat-menu-item  >
                     <mat-icon>person</mat-icon>
-                    <span>Edit Profile</span>
+                    <span [routerLink]="['user/edit']">Edit Profile</span>
                   </button>
                   <button mat-menu-item (click)="onLogout()">
                     <mat-icon>power_settings_new</mat-icon>
