--- a/ClientApp/src/app/user/user/user.component.html
+++ b/ClientApp/src/app/user/user/user.component.html
@@ -1,4 +1,17 @@
-<p>
-  
-  user is {{user.firstName}}
-</p>
+<mat-card class="user-card">
+  <mat-card-header>
+    <div mat-card-avatar style="background-image: url('{{user.photoUrl}}')" class="user-header-image"></div>
+    <mat-card-title>Shiba Inu</mat-card-title>
+    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="{{user.photoUrl}}" alt="{{user.firstName}} photo">
+  <mat-card-content>
+    <p>
+      {{user.firstName}} {{user.lastName}} - from {{user.country}}
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
