--- a/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/ClientApp/src/app/toolbar/toolbar.component.html
@@ -28,9 +28,9 @@
           </li>
           /
           <li>
-            <a routerLink="/signup">
+            <a routerLink="/register">
               <!-- <mat-icon class="icon-menu">face</mat-icon> -->
-              <span>Signup</span>
+              <span>Register</span>
             </a>
           </li>
         </ul>
