--- a/ClientApp/src/app/user/edit-user/edit-user.component.html
+++ b/ClientApp/src/app/user/edit-user/edit-user.component.html
@@ -1,10 +1,10 @@
 <mat-card class="user-card">
   <mat-card-header>
-    <img mat-card-avatar src="{{user.photoUrl}}" class="user-header-image">
+    <img mat-card-avatar src="{{user.photoUrl || '../../../assets/images/user.png'}}" class="user-header-image">
     <mat-card-title>{{user.firstName}} {{user.lastName}}</mat-card-title>
     <mat-card-subtitle>{{user.country}}</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{user.photoUrl}}" alt="{{user.firstName}} photo">
+  <img mat-card-image src="{{user.photoUrl || '../../../assets/images/user.png'}}" alt="{{user.firstName}} photo">
   <mat-card-content>
     <form fxLayout="column" 
       fxLayoutAlign="center center"
