--- a/ClientApp/src/app/user/user/user.component.html
+++ b/ClientApp/src/app/user/user/user.component.html
@@ -1,13 +1,13 @@
 <mat-card class="user-card">
   <mat-card-header>
-    <div mat-card-avatar style="background-image: url('{{user.photoUrl}}')" class="user-header-image"></div>
+    <div mat-card-avatar style="background-image: url('{{user.photoUrl || '../../../assets/images/user.png'}}')" class="user-header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
     <mat-card-subtitle>Dog Breed</mat-card-subtitle>
   </mat-card-header>
-  <img mat-card-image src="{{user.photoUrl}}" alt="{{user.firstName}} photo">
+  <img mat-card-image src="{{user.photoUrl || '../../../assets/images/user.png'}}" alt="{{user.firstName}} photo">
   <mat-card-content>
     <p>
-      {{user.firstName}} {{user.lastName}} - from {{user.country}}
+      {{user.firstName}} {{user.lastName}} - from {{user.country }}
     </p>
   </mat-card-content>
   <mat-card-actions>
