uploaded with migration to sqlserver

--- a/ClientApp/src/app/auth/register/register.component.html
+++ b/ClientApp/src/app/auth/register/register.component.html
@@ -57,9 +57,9 @@
     <button type="submit" mat-raised-button color="primary" [disabled]="registerForm.invalid" >Register</button>
   </form>
 </section>
-
+<!-- 
 <p>{{registerForm.value | json}}</p>
 <p>{{registerForm.valid | json}}</p>
 
 <p>{{registerForm.hasError('mismatch') | json}}</p>
-<p>{{registerForm.hasError() | json}}</p>
+<p>{{registerForm.hasError() | json}}</p> -->
